# grana_model

./: .coverage  .gitignore  README.md  TODO.md  main.py  notes.txt  play.ipynb  plot_lhcii.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/grana_model/: attractionhandler.py  collisionhandler.py  collisionobserver.py  dcalibrator.py  densityhandler.py  diffusionhandler.py  granamodel.py  image_coordinates_subshape.py  main.py  objectdata.py  overlapagent.py  particle.py  psiistructure.py  reductionagent.py  scale_test.py  scratch.py  shape_gen_circle.ipynb  simulationenv.py  simulationwindow.py  spawner.py  spritehandler.py  utils.py  workspace.code-workspace
src/grana_model/res/compound_shapes/: 07092021_1538_C2S2M2_subshape_0_points.csv  07092021_1538_C2S2M2_subshape_1_points.csv  07092021_1540_C2S2M_subshape_0_points.csv  07092021_1540_C2S2M_subshape_1_points.csv  07092021_1540_C2S2M_subshape_2_points.csv  07092021_1540_C2S2_subshape_0_points.csv  07092021_1540_C2S2_subshape_1_points.csv  07092021_1541_C2S_subshape_0_points.csv  07092021_1541_C2S_subshape_1_points.csv  07092021_1541_C2S_subshape_2_points.csv  07092021_1541_C2_subshape_0_points.csv  07092021_1542_C1_subshape_0_points.csv  07092021_1542_LHCII-monomer_subshape_0_points.csv  07092021_1542_LHCII_subshape_0_points.csv  07092021_1543_cytb6f_subshape_0_points.csv  07092021_1543_cytb6f_subshape_1_points.csv  07092021_1545_C2S2M2_subshape_0_points.csv  07092021_1545_C2S2M2_subshape_1_points.csv  (+361 more)
tests/: test_objectdata.py  test_overlapagent.py  test_reductionagent.py  test_spawner.py
