[metadata]
name = grana_model
description = model of protein structures within thylakoid membrane
author = Magnus Wood
license = MIT
license_file = LICENSE.txt
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    grana_model
install_requires =
    numpy>=1.21.2
    pandas>=1.3.3
    pyglet>=1.5.21
    pymunk>=6.2.0

python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
grana_model = py.typed

[flake8]
max-line-length = 160